# euchre-training-app

./: .gitignore  README.md
engine/: Cargo.toml  build-wasm.sh
engine/.cargo/: config.toml
engine/benches/: dds_bench.rs
engine/src/: lib.rs  wasm_api.rs
engine/src/ai/: blunder.rs  dds.rs  mod.rs  opponents.rs  pimc.rs
engine/src/game/: card.rs  mod.rs  rules.rs  scoring.rs  state.rs
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
web/e2e/: play-flow.spec.ts  review-flow.spec.ts  smoke.spec.ts
web/public/: manifest.json  sw.js
web/src/: App.css  App.tsx  index.css  main.tsx
web/src/components/: BiddingPanel.tsx  DealingAnimation.tsx  DiscardPanel.tsx  GameOver.tsx  GameTable.css  GameTable.tsx  HandSummary.tsx  WasmErrorBoundary.tsx
web/src/components/cards/: Card.tsx
web/src/db/: schema.ts
web/src/engine/: bridge.ts  worker.ts
web/src/pages/: HistoryPage.tsx  PlayPage.tsx  ReviewPage.css  ReviewPage.tsx  SettingsPage.tsx
web/src/stores/: store.ts
