[package]
name = "euchre-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.9", features = ["small_rng"] }
rand_chacha = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = 'abort'

[profile.dev-wasm]
inherits = "dev"
opt-level = 1

[[bench]]
name = "dds_bench"
harness = false
